# GlodGET

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
src/: glod.rs  main.rs  physics.rs  random.rs  start.rs  state.rs  unit.rs  weapon.rs
src/gui/: config.rs  glod.rs  menu.rs  mod.rs  start.rs  unit.rs  weapon.rs
