[package]
name = "GlodGET"
version = "0.1.0"
edition = "2021"
authors = ["Rob <rob@ishigoya.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["wayland"] }
bevy_rapier2d = { version="0.16.0", features = ["debug-render"] }
rand = "0.8.5"
fraction = "0.11.1"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_prototype_lyon = "0.6.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_websocket_adapter = { path = "../bevy-websocket-adapter", "version" = "0.1.5" }
serde = "1.0.142"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "console",
]
